<resources>
    <string name="app_name">Panta Rhei</string>

    <string name="select">Select</string>
    <string name="cancel">Cancel</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fetch">Fetch</string>
    <string name="delete">Delete</string>

    <string name="search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_version_label">Version\u0020</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_menu_bank_accounts_section_title">Accounts</string>
    <string name="drawer_menu_all_bank_accounts_title">All accounts</string>
    <string name="drawer_menu_add_bank_account_title">Add account</string>

    <string name="floating_action_menu_add_account">Account</string>
    <string name="floating_action_menu_transfer_money">Transfer money</string>

    <string name="menu_home">Home</string>

    <string name="menu_main_update_transactions">Update transactions</string>

    <string name="fragment_home_could_not_retrieve_account_transactions">Could not retrieve account transactions:\n%s</string>
    <string name="fragment_home_transfer_money_to">Transfer money to %s</string>

    <string name="dialog_add_account_enter_bank_code">Bank code (find also by bank name or city):</string>
    <string name="dialog_add_account_enter_fints_server_address">FinTS server address:</string>
    <string name="dialog_add_account_enter_customer_id">Online banking login name:</string>
    <string name="dialog_add_account_enter_pin">Online banking password:</string>
    <string name="dialog_add_account_add">Add</string>
    <string name="dialog_add_account_bank_does_not_support_fints_3_error_message">%s does not support FinTS 3.0 and therefore cannot be used in this application.</string>
    <string name="dialog_add_account_message_could_not_add_account">Could not add account: %s</string>
    <string name="dialog_add_account_message_successfully_added_account">
        Successfully added account.
        \n\nWould you like to fetch this account\'s transactions now? For this entering a TAN is required.
    </string>
    <string name="dialog_add_account_message_successfully_added_account_support_retrieving_transactions_of_last_90_days_without_tan">
        Successfully added account.
        \n\nAccount transactions of last 90 days could be retrieved without a TAN.
        \n\nWould you like to fetch all account transactions now? For this entering a TAN is required.
    </string>

    <string name="dialog_transfer_money_account">Account:</string>
    <string name="dialog_transfer_money_remittee_name">Name:</string>
    <string name="dialog_transfer_money_remittee_iban">IBAN:</string>
    <string name="dialog_transfer_money_remittee_bank">Bank (will be entered automatically):</string>
    <string name="dialog_transfer_money_remittee_bic">BIC (will be entered automatically):</string>
    <string name="dialog_transfer_money_amount">Amount:</string>
    <string name="dialog_transfer_money_usage">Usage:</string>
    <string name="dialog_transfer_money_transfer">Transfer</string>
    <string name="dialog_transfer_money_message_transfer_successful">Successfully transferred %1$s %2$s to %3$s.</string>
    <string name="dialog_transfer_money_message_transfer_failed">Could not transfer %1$s %2$s to %3$s:\n%4$s.</string>

    <string name="view_tan_image_size_controls_size">Size:</string>
    <string name="view_tan_image_size_controls_decrease_size">-</string>
    <string name="view_tan_image_size_controls_increase_size">+</string>

    <string name="view_flicker_code_frequency">Frequency:</string>
    <string name="view_flicker_code_decrease_frequency">-</string>
    <string name="view_flicker_code_increase_frequency">+</string>

    <string name="dialog_enter_tan_select_tan_procedure">TAN procedure</string>
    <string name="dialog_enter_tan_select_tan_medium">TAN medium</string>
    <string name="dialog_enter_tan_enter_tan">Enter TAN:</string>
    <string name="dialog_enter_tan_error_could_not_decode_tan_image">Could not decode flicker code or QR code / PhotoTan. Most likely an internal error:\n%s.</string>
    <string name="dialog_enter_tan_tan_medium_successfully_changed">TAN medium successfully changed to \'%s\'.</string>
    <string formatted="false" name="dialog_enter_tan_error_changing_tan_medium">Could not change TAN medium to \'%s\':\n%s.</string>

    <!-- Removed <p></p> from last paragraph as otherwise TextView has some padding at the end -->
    <string name="dialog_enter_atc_explanation"><![CDATA[
        <p>Your bank asks you to synchronize your TAN generator.</p>
        <p>Please insert the card \'%s\' into your TAN generator.</p>
        <p>Then press the \'TAN\' button for a few seconds till \'aktiviert\' gets displayed.</p>
        <p>Then either press the \'TAN\' button again or enter the start code \'103\', press the \'OK\' button twice and then the \'ᐯ\' button (depends on your model).</p>
        Now the values for \'TAN\' and \'ATC\' should be displayed. Enter these two values below:
    ]]></string>
    <string name="dialog_enter_atc_tan_label">TAN:</string>
    <string name="dialog_enter_atc_atc_label">ATC:</string>
    <string name="dialog_enter_atc_error_entered_atc_is_not_a_number">ATC has to be a number.\n\nBut entered ATC value \'%s\' cannot be converted to a number.</string>

    <string name="dialog_edit_account_ask_should_account_be_deleted">Really delete account \'%s\'?
        \n\nThis cannot be undone and data will be lost.</string>


    <string name="error_no_name_entered">Please enter remittee\'s name</string>
    <string name="error_invalid_sepa_characters_entered">Invalid character(s) entered: %s</string>
    <string name="error_no_iban_entered">Please enter remittee\'s IBAN</string>
    <string name="error_invalid_iban_characters_entered">Invalid character(s) entered: %s</string>
    <string name="error_invalid_iban_pattern_entered">IBAN has to have pattern: EN12 1234 5678 9012 3456 78</string>
    <string name="error_no_bank_found_for_entered_iban">No bank found for entered IBAN.</string>
    <string name="error_no_bic_entered">Please enter remittee\'s BIC</string>
    <string name="error_invalid_bic_characters_entered">Invalid character(s) entered: %s</string>
    <string name="error_invalid_bic_pattern_entered">A BIC consists of 8 or 11 characters and has the pattern: ABCDED12(XYZ)</string>
    <string name="error_no_amount_entered">Please enter the amount to be transferred</string>
    <string name="error_invalid_amount_entered">Please enter an amount greater zero.</string>

</resources>
