<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_tan_image_controls_buttons_height"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/view_tan_image_size_controls_size"
    />

    <Button
            android:id="@+id/btnDecreaseSize"
            android:layout_width="@dimen/view_tan_image_controls_buttons_width"
            android:layout_height="@dimen/view_tan_image_controls_buttons_height"
            android:text="@string/view_tan_image_size_controls_decrease_size"
    />

    <Button
            android:id="@+id/btnIncreaseSize"
            android:layout_width="@dimen/view_tan_image_controls_buttons_width"
            android:layout_height="@dimen/view_tan_image_controls_buttons_height"
            android:text="@string/view_tan_image_size_controls_increase_size"
    />

</LinearLayout>