<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dialog_add_account_padding"
        >

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_add_account_field_bottom_margin"
            android:hint="@string/dialog_add_account_enter_bank_code"
            >

        <AutoCompleteTextView
                android:id="@+id/edtxtBankCode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_add_account_edit_text_height"
                android:inputType="text"
                >

            <requestFocus />
        </AutoCompleteTextView>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_add_account_field_bottom_margin"
            android:hint="@string/dialog_add_account_enter_fints_server_address"
            >

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtxtFinTsServerAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_add_account_edit_text_height"
                android:inputType="textUri"
                android:enabled="false"
                />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_add_account_field_bottom_margin"
            android:hint="@string/dialog_add_account_enter_customer_id"
            >

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtxtCustomerId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_add_account_edit_text_height"
                android:inputType="number"
                />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_add_account_field_bottom_margin"
            android:hint="@string/dialog_add_account_enter_pin"
            >

        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtxtPin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_add_account_edit_text_height"
                android:inputType="textPassword"
                />

    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
            android:id="@+id/lytButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <Button
                android:id="@+id/btnAddAccount"
                android:layout_width="@dimen/dialog_add_account_buttons_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/dialog_add_account_add"
                android:enabled="false"
                />

        <Button
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/dialog_add_account_buttons_width"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btnAddAccount"
                android:layout_toStartOf="@+id/btnAddAccount"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/cancel"
                />

    </RelativeLayout>

</LinearLayout>