<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dialog_enter_atc_padding"
            android:isScrollContainer="true"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >


        <TextView
                android:id="@+id/txtAtcExplanationToShowToUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_enter_atc_enter_value_field_height"
                android:layout_marginBottom="@dimen/dialog_enter_atc_enter_value_field_margin_bottom"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/dialog_enter_atc_tan_label"
            />

            <EditText
                    android:id="@+id/edtxtEnteredTan"
                    android:layout_width="@dimen/dialog_enter_atc_enter_value_field_value_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dialog_enter_atc_enter_value_field_value_margin_left"
                    android:layout_marginStart="@dimen/dialog_enter_atc_enter_value_field_value_margin_left"
                    android:inputType="number"
            />

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_enter_atc_enter_value_field_height"
                android:layout_marginBottom="@dimen/dialog_enter_atc_enter_value_field_margin_bottom"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/dialog_enter_atc_atc_label"
            />

            <EditText
                    android:id="@+id/edtxtEnteredAtc"
                    android:layout_width="@dimen/dialog_enter_atc_enter_value_field_value_width"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dialog_enter_atc_enter_value_field_value_margin_left"
                    android:layout_marginStart="@dimen/dialog_enter_atc_enter_value_field_value_margin_left"
                    android:inputType="number"
            />

        </LinearLayout>


        <RelativeLayout
                android:id="@+id/lytButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
        >

            <Button
                    android:id="@+id/btnEnteringAtcDone"
                    android:layout_width="@dimen/dialog_enter_atc_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@android:string/ok"
            />

            <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="@dimen/dialog_enter_atc_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btnEnteringAtcDone"
                    android:layout_toStartOf="@+id/btnEnteringAtcDone"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/cancel"
            />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>