<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_transfer_money_padding"
    android:isScrollContainer="true"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <LinearLayout
                android:id="@+id/lytSelectBankAccount"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_transfer_money_select_account_height"
                android:layout_marginLeft="@dimen/dialog_transfer_money_select_account_label_margin_start"
                android:layout_marginStart="@dimen/dialog_transfer_money_select_account_label_margin_start"
                android:layout_marginBottom="@dimen/dialog_transfer_money_select_account_margin_bottom"
                android:gravity="center_vertical"
                android:visibility="gone"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dialog_transfer_money_account"
                    android:layout_marginRight="@dimen/dialog_transfer_money_select_account_label_margin_end"
                    android:layout_marginEnd="@dimen/dialog_transfer_money_select_account_label_margin_end"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dialog_transfer_money_select_account_text_size"
            />

            <Spinner
                    android:id="@+id/spnBankAccounts"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
            />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytRemitteeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_transfer_money_remittee_name"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtRemitteeName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_transfer_money_input_fields_height"
                android:inputType="textPersonName"
            >

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytRemitteeIban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_transfer_money_remittee_iban"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtRemitteeIban"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_transfer_money_autocomplete_fields_height"
                android:inputType="textCapCharacters"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtRemitteeBankInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Small"
            android:visibility="gone"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_transfer_money_amount"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtAmount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_transfer_money_input_fields_height"
                android:inputType="numberDecimal"
            />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytUsage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_transfer_money_usage"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtxtUsage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_transfer_money_input_fields_height"
                android:inputType="text"
            />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/lytInstantPayment"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/dialog_transfer_money_instant_payment_margin_top"
            android:layout_marginBottom="@dimen/dialog_transfer_money_instant_payment_margin_bottom"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            >

            <RelativeLayout
                android:id="@+id/lytInstantPaymentInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/swtchInstantPayment"
                android:layout_toStartOf="@+id/swtchInstantPayment"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/dialog_transfer_money_instant_payment_show_info_button_margin_end"
                android:layout_marginEnd="@dimen/dialog_transfer_money_instant_payment_show_info_button_margin_end"
                >

                <TextView
                    android:id="@+id/txtvwInstantPaymentLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="@dimen/dialog_transfer_money_instant_payment_text_size"
                    android:lines="1"
                    android:ellipsize="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:text="@string/dialog_transfer_money_instant_payment"
                    />

                <TextView
                    android:id="@+id/txtvwInstantPaymentMayWithConstsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/txtvwInstantPaymentLabel"
                    android:layout_toEndOf="@+id/txtvwInstantPaymentLabel"
                    android:layout_toLeftOf="@+id/btnShowInstantPaymentInfo"
                    android:layout_toStartOf="@+id/btnShowInstantPaymentInfo"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/dialog_transfer_money_instant_payment_may_with_costs_margin_start"
                    android:layout_marginStart="@dimen/dialog_transfer_money_instant_payment_may_with_costs_margin_start"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:lines="1"
                    android:ellipsize="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:text="@string/dialog_transfer_money_instant_payment_may_with_costs"
                    />

                <ImageButton
                    android:id="@+id/btnShowInstantPaymentInfo"
                    android:layout_width="@dimen/dialog_transfer_money_instant_payment_show_info_button_size"
                    android:layout_height="@dimen/dialog_transfer_money_instant_payment_show_info_button_size"
                    android:layout_marginLeft="@dimen/dialog_transfer_money_instant_payment_show_info_button_margin_start"
                    android:layout_marginStart="@dimen/dialog_transfer_money_instant_payment_show_info_button_margin_start"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_baseline_info_24"
                    android:tint="@color/infoIconColor"
                    />

            </RelativeLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swtchInstantPayment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lytButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        >

            <Button
                android:id="@+id/btnTransferMoney"
                android:layout_width="@dimen/dialog_transfer_money_buttons_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/dialog_transfer_money_transfer"
                android:enabled="false"
            />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/dialog_transfer_money_buttons_width"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btnTransferMoney"
                android:layout_toStartOf="@+id/btnTransferMoney"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/cancel"
            />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>